<resources>
    <string name="app_name">Pregamate</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="signup">Create Account</string>
    <string name="signup_underline"><u>Create Account</u></string>
    <string name="welcome_text">Enter the first day of your last menstruation to customize your Pregamate journey</string>
    <string name="welcome">Welcome Mumma!</string>
    <string name="name">Name : </string>
    <string name="email">Email : </string>
    <string name="username">Username : </string>
    <string name="password">Password : </string>
    <string name="confirm_password">Confirm Password : </string>
    <string name="login_text">Do not have an account? </string>
    <string name="forgot_password">Forgot Password : </string>
    <string name="forgot_password_underline"><u>Forgot Password?</u></string>
    <string name="signup_text">Back to </string>
    <string name="start_button">Let Us Start</string>
    <string name="recover">Recover</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a r ationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_signout">Sign Out</string>
    <string name="first_trimester">First trimester</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="diets">Diets</string>
    <string name="exercises">Exercises</string>
    <string name="tests">Tests</string>
    <string name="title_activity_community">Community</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_message">Enter message</string>
    <string name="action_signout">Sign Out</string>
    <string name="dos_and_don_ts">Dos and Don\'ts</string>
    <string name="baby_growth">Baby Growth</string>
    <string name="dummy_text">Study nature, love nature,
        \nclose to nature</string>
    <string name="trim1">First Trimester</string>
    <string name="trim2">Second Trimester</string>
    <string name="trim3">Third Trimester</string>
    <string name="trim1Desc">First Trimester some one liner Description</string>
    <string name="trim2Desc">Second Trimester some one liner Description</string>
    <string name="trim3Desc">Third Trimester some one liner Description</string>
    <string name="placeholder_text">Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to natureStudy nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature Study nature, love nature, close to nature</string>
    <string name="changes_in_mum">Changes in Mum</string>
    <string name="emergency">Emergency</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="user">User</string>
    <string name="trimester">Trimester</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diets</string>
    <string name="_1st_number">1st number</string>
    <string name="_2nd_number">2nd number</string>
    <string name="done">Done</string>
    <string name="email_user">Email</string>
    <string name="name_user">Name</string>
    <string name="tell_us_more">Tell Us More</string>
    <string name="about_us">Know more about Pregamate</string>
    <string name="rate_us">Like pregamate? Give a rating</string>
    <string name="send">send</string>
    <string name="diets_content">Eat a diet high in fruits, vegetables, low-fat forms of protein, and fiber. Drink lots of water. Intake sources iron and protein enriched with amino acids that act as the building blocks for cells. Eat enough calories (about 300 calories more than normal). Avoid alcohol .Avoid caffeine (no more than one cup of coffee or tea per day) Avoid raw fish or smoked seafood (no sushi) .Avoid eating raw sprouts, unpasteurized milk or other dairy products, deli meats or hot dogs.</string>
    <string name="exercises_content">During the first trimester, aim to establish good exercise habits gradually. The right amount of exercise will depend on how active a person was before becoming pregnant. It is best to favor low-impact exercises, especially walking, yoga, swimming, and water aerobics. Some slightly more vigorous exercises are often appropriate in the first trimester. Examples include running, jogging, and moderate weightlifting. While the benefits generally outweigh the risks, speak with a doctor before starting any new exercises or workout routines. A person who exercised regularly before becoming pregnant should consult a doctor, and if possible a personal trainer, about gradually decreasing the intensity of their workout to a level that is safe during pregnancy.</string>
</resources>