<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pregamate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.pregamate.ui.user.UserFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.pregamate.ui.signout.SignoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_signout" />
    <activity
        android:id="@+id/homeActivity2"
        android:name="com.example.pregamate.HomeActivity"
        android:label="content_try"
        tools:layout="@layout/content_try" />
</navigation>