<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:text="@string/welcome"
        android:textColor="@color/dark_grey"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_user_logo"
        tools:ignore="ContentDescription,VectorDrawableCompat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="190dp"/>


    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-light"
        android:text="@string/start_button"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:backgroundTint="@color/white" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"/>


</RelativeLayout>