<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_user_logo"
        tools:ignore="ContentDescription,VectorDrawableCompat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailEt3"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_textbox"
            android:hint="@string/email"
            android:padding="16dp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"/>


    </LinearLayout>


    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-light"
        android:text="@string/recover"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:backgroundTint="@color/white" />


</RelativeLayout>